# dados-br

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  download_amostras.sh  pyproject.toml  verificar_instalacao.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  novo_dataset.yml
.github/workflows/: ci.yml  release.yml
catalog/ct/: capes_pos_graduacao.yaml  cnpq_bolsas_fomentos.yaml  inpi_patentes.yaml  mcti_investimentos.yaml
catalog/datasus/: populacao.yaml  sim_doinf.yaml  sim_dores.yaml  sinasc.yaml
catalog/educacao/: ufrn_dados_abertos.yaml
catalog/financeiro/: siope.yaml  tesouro_transparente.yaml
catalog/goias/: educacao.yaml  saneamento.yaml  saude.yaml
catalog/ibge/: censo_demografico.yaml  malha_br.yaml  malha_go.yaml  pense.yaml  pnadc_microdados.yaml
catalog/indicators/: datasus_saude.yaml  educacao_basica.yaml  educacao_superior.yaml  financeiro_educacao.yaml  ibge_social.yaml  outros_datasets.yaml
catalog/inep_mec/: censo_escolar.yaml  censo_superior.yaml  distorcao_idade_serie.yaml  encceja.yaml  enem.yaml  ideb.yaml  saeb.yaml
catalog/mp/: cnmp_dados_ministerio_publico.yaml  mpf_dados_abertos.yaml
catalog/prefeituras/: goiania.yaml  rio_de_janeiro.yaml  sao_paulo.yaml
catalog/snis/: residuos_solidos.yaml
catalog/transparencia/: cgu_acordos_leniencia.yaml  portal_transparencia_federal.yaml
catalog/tribunais/: cnj_dados_judiciarios.yaml  tcu_acordaos.yaml
dadosbr/: __init__.py  checker.py  cli.py  config.py  context.py  downloader.py  extractor.py  indicators.py  manifest.py  models.py  registry.py  services.py  utils.py
dadosbr/commands/: __init__.py  catalog.py  download.py  indicators.py  integrity.py  system.py
tests/: conftest.py  test_checker.py  test_cli.py  test_indicators.py  test_models.py  test_registry.py  test_yamls.py
